# kisscache

./: .env  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  proxmox_deploy.sh  pyproject.toml
.github/workflows/: generic-analyze-job.yml  generic-docker-build-job.yml  run-all-builds.yml  run-all-tests.yml
.gitlab-ci/analyze/: black.sh  pylint.sh
.gitlab-ci/publish/: docker-multiarch.sh
kiss_cache/: __about__.py  __init__.py  admin.py  apps.py  models.py  settings.py  signals.py  tasks.py  urls.py  utils.py  views.py
kiss_cache/migrations/: 0001_initial.py  0002_alter_resources.py  0003_auto_20190726_0838.py  0004_remove_resource_filename.py  0005_resource_headers.py  0006_resources_state_and_status_code.py  0007_resource_created_at.py  0008_statistic.py  0009_statistic_value_biginteger.py  0010_remove_resource_path.py  0011_add_more_statistics.py  0012_add_statistic_requests.py  0013_resource_content_length_big_integer.py  0014_auto_resource_url_512.py  0015_mirror.py  0016_resource_url_4096.py  0017_downloaded_speed.py  0018_extra_headers.py  0019_resource_downloaded.py
kiss_cache/templates/kiss_cache/: help.html  index.html  resources.html
kiss_cache/templatetags/: kiss_cache.py
share/: celery.py  entrypoint.sh  init.py  settings.py  urls.py
tests/: settings.py  test_models.py  test_tasks.py  test_utils.py  test_views.py
