[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "kisscache"
version = "0.2.0"
description = "A simple and stupid cache service"
license = "MIT"
authors = [
  { name = "Rémi Duraffort", email = "remi.duraffort@linaro.org" },
]
requires-python = ">=3.13"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "celery>=5.5.2",
  "django>=4.2.28,<6.0.0",
  "gunicorn>=23.0.0",
  "psycopg2-binary>=2.9.10",
  "pyyaml>=6.0.2",
  "redis>=8.0.0",
  "requests>=2.32.3",
  "whitenoise>=6.8.2",
]
urls.Homepage = "https://gitlab.com/linaro/KissCache"

[dependency-groups]
dev = [ "pytest>=8.3.5", "pytest-cov>=5.0.0", "pytest-django>=4.5.2", "pytest-mock>=3.14.0", "ruff>=0.15.0" ]

[tool.hatch]
build.targets.wheel.packages = [ "kiss_cache" ]

[tool.ruff]
lint.extend-select = [
  "E4", # pycodestyle import issues
  "E7", # pycodestyle statement issues
  "E9", # pycodestyle runtime issues
  "F",  # pyflakes: undefined names, unused imports, etc.
  "F4", # pyflakes imports
  "F8", # pyflakes names
  "G",  # flake8-logging
  "UP", # pyupgrade: modernize Python
  "W",  # pycodestyle warnings
]
lint.isort.force-single-line = true

[tool.pyproject-fmt]
keep_full_version = true

[tool.bandit]
skips = [
  "B308", # blacklist_calls mark_safe
  "B703", # django_mark_safe potential XSS on mark_safe function
]
